Add link to 7.0.0 release.
Change-Id: I473044f47e355b119b6024ae48b8d4208dcd3fef

--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@ IntInterval evensFrom1To10 =
                 </div>
                 <div class="col-lg-4 col-sm-4">
                     <h3>Latest News</h3>
-                    <p class="regular">Eclipse Collections 7.0.0 released <a class="light">(Jan 20th 2016)</a></p>
+                    <p class="regular">Eclipse Collections 7.0.0 <a href="https://github.com/eclipse/eclipse-collections/releases/tag/7.0.0">released</a> <a class="light">(Jan 20th 2016)</a></p>
                     <p class="regular">Eclipse Collections was presented at
                         <a href="http://www.java-users.jp/?page_id=2064#GH-4">
                             JJUG CCC 2015 Fall
