--- a/ja/index.html
+++ b/ja/index.html
@@ -463,7 +463,7 @@ IntInterval evensFrom1To10 =
             </div>
             <div class="col-lg-4 col-sm-4">
                 <h3>最新ニュース</h3>
-                <p class="regular">Eclipse Collections 7.0.0がリリースされました <a class="light">(Jan 20th 2016)</a></p>
+                <p class="regular">Eclipse Collections 7.0.0が<a href="https://github.com/eclipse/eclipse-collections/releases/tag/7.0.0">リリース</a>されました <a class="light">(Jan 20th 2016)</a></p>
                 <p class="regular">
                     <a href="http://www.java-users.jp/?page_id=2064#GH-4">
                         JJUG CCC 2015 Fall
