--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@ ImmutableStack&lt;String&gt; immutableStack =
   Stacks.immutable.with("One", "One", "Two", "Three");
 ImmutableMap&lt;String, String&gt; immutableMap =
   Maps.immutable.with("key1", "value1", "key2", "value2", "key3", "value3");
-ImmutableMultimap&lt;String, String&gt; immultimapWithList =
+ImmutableMultimap&lt;String, String&gt; immutableMultimapWithList =
   Multimaps.immutable.list.with("key1", "value1-1", "key1", "value1-2", "key2","value2-1");
 ImmutableBiMap&lt;String, String&gt; immutableBiMap =
   BiMaps.immutable.with("key1", "value1", "key2", "value2", "key3", "value3");</pre>
@@ -474,7 +474,7 @@ IntInterval evensFrom1To10 =
                     </p>
                     <p class="regular">Eclipse Collections was presented at
                         <a href="https://www.eclipsecon.org/europe2015/session/eclipse-collections-example">
-                            EclipseCon Europ 2015
+                            EclipseCon Europe 2015
                         </a>
                         <a class="light">(Nov 5th 2015)</a>
                     </p>
