Fix Japanese typo.
Change-Id: Ie784d21bd165c0526a2c46bcb97a81f0d308a007

--- a/ja/index.html
+++ b/ja/index.html
@@ -487,7 +487,7 @@ IntInterval evensFrom1To10 =
                 </p>
             </div>
             <div class="col-lg-4 col-sm-4">
-                <h3>コニュミティ リンク集</h3>
+                <h3>コミュニティ リンク集</h3>
                 <p class="regular">Eclipse PMI: <a href="https://projects.eclipse.org/projects/technology.collections">eclipse project management infrastructure</a></p>
                 <p class="regular">GitHub: <a href="https://github.com/eclipse/eclipse-collections">eclipse-collections</a></p>
                 <p class="regular">Issues: <a href="https://github.com/eclipse/eclipse-collections/issues">GitHub issues</a></p>
