Adjust the location of anchors after removing incubation logo.
Change-Id: If58d65905d545a2957cbf2502e7e40a3e1dfca62

--- a/index.html
+++ b/index.html
@@ -100,7 +100,6 @@
             <div class="row">
                 <div class="col-lg-push-2 col-lg-8">
                     <div class="intro-message">
-                        <a  name="start"></a><!--TODO: Bring it back to correct place once incubation logo is removed.-->
                         <h1>Eclipse <span style="font-weight: 400">Collections</span></h1>
                         <h3>- Features you want with the collections you need -</h3>
                     </div>
@@ -115,6 +114,7 @@
 
     <!-- Page Content -->
 
+    <a  name="start"></a>
     <div class="content-section-a">
 
         <div class="container-fluid">
@@ -123,7 +123,6 @@
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
                     <h2 class="section-heading">Get started with <br>Eclipse Collections</h2>
-                    <a name="concept"></a><!--TODO: Bring it back to correct place once incubation logo is removed.-->
                     <p class="lead">Eclipse Collections is the best Java collections framework ever
                         that brings happiness to your Java development.
                         <br><br>Integrate it to your codebase today with your favorite build tools!</p>
@@ -176,6 +175,7 @@ compile 'org.eclipse.collections:eclipse-collections:7.1.0'</pre>
     </div>
     <!-- Get Started -->
 
+    <a name="concept"></a>
     <div class="content-section-b">
 
         <div class="container-fluid">
@@ -386,7 +386,6 @@ IntInterval evensFrom1To10 =
                         <li><a href="#map" data-toggle="tab">Maps</a></li>
                         <li><a href="#ints" data-toggle="tab">Primitive Collections</a></li>
                     </ul>
-                    <a name="history"></a><!--TODO: Bring it back to correct place once incubation logo is removed.-->
                     <div id="memory" class="tab-content">
                         <div class="tab-pane fade in active" id="set">
                             <img class="img-responsive" src="img/set.png" alt="">
@@ -407,6 +406,7 @@ IntInterval evensFrom1To10 =
     </div>
     <!-- Memory footprint -->
 
+    <a name="history"></a>
     <div class="content-section-a">
 
         <div class="container-fluid">
