--- a/index.html
+++ b/index.html
@@ -68,6 +68,9 @@
                         <a href="#concept">Concept</a>
                     </li>
                     <li>
+                        <a href="#learn">Learn</a>
+                    </li>
+                    <li>
                         <a href="#history">History</a>
                     </li>
                     <li>
@@ -93,7 +96,7 @@
 
 
     <!-- Header -->
-    <a name="about"></a>
+    <a class="anchor" name="about"></a>
     <div class="intro-header">
         <div class="container-fluid">
 
@@ -114,7 +117,7 @@
 
     <!-- Page Content -->
 
-    <a  name="start"></a>
+    <a class="anchor" name="start"></a>
     <div class="content-section-a">
 
         <div class="container-fluid">
@@ -175,7 +178,7 @@ compile 'org.eclipse.collections:eclipse-collections:7.1.0'</pre>
     </div>
     <!-- Get Started -->
 
-    <a name="concept"></a>
+    <a class="anchor" name="concept"></a>
     <div class="content-section-b">
 
         <div class="container-fluid">
@@ -406,8 +409,67 @@ IntInterval evensFrom1To10 =
     </div>
     <!-- Memory footprint -->
 
-    <a name="history"></a>
+    <a class="anchor" name="learn"></a>
     <div class="content-section-a">
+
+        <div class="container-fluid">
+
+            <div class="row">
+                <div class="col-lg-5 col-sm-6">
+                    <hr class="section-heading-spacer">
+                    <div class="clearfix"></div>
+                    <h2 class="section-heading">Learn Eclipse Collections with Kata</h2>
+                    <p class="lead">
+                        Check out the <a href="https://github.com/eclipse/eclipse-collections-kata">Eclipse Collections Kata</a>, a fun way to help you learn idiomatic Eclipse Collections usage.
+                        This particular kata is set up as a series of unit tests which fail.
+                        Your task is to make them pass, using Eclipse Collections.
+                    </p>
+                </div>
+                <div class="col-lg-7 col-sm-6">
+                    <ul class="nav nav-tabs">
+                        <li class="active"><a href="#exercise" data-toggle="tab">Sample Exercise</a></li>
+                        <li><a href="#solution" data-toggle="tab">Sample Solution</a></li>
+                    </ul>
+                    <div class="tab-content">
+                        <div class="tab-pane fade in active" id="exercise">
+                            <pre  class="prettyprint lang-java">
+@Test
+public void getFirstNamesOfAllPeople()
+{
+  MutableList&lt;Person&gt; people = this.people;
+  MutableList&lt;String&gt; firstNames = null; //Replace null, with a transformation method on MutableList.
+  MutableList&lt;String&gt; expectedFirstNames =
+    Lists.mutable.with("Mary", "Bob", "Ted", "Jake", "Barry", "Terry", "Harry", "John");
+  Assert.assertEquals(expectedFirstNames, firstNames);
+}</pre>
+                        </div>
+                        <div class="tab-pane fade" id="solution">
+                            <pre  class="prettyprint lang-java">
+@Test
+public void getFirstNamesOfAllPeople()
+{
+  MutableList&lt;Person&gt; people = this.people;
+  MutableList&lt;String&gt; firstNames = people.collect(Person::getFirstName);
+  MutableList&lt;String&gt; expectedFirstNames =
+    Lists.mutable.with("Mary", "Bob", "Ted", "Jake", "Barry", "Terry", "Harry", "John");
+  Assert.assertEquals(expectedFirstNames, firstNames);
+}</pre>
+                        </div>
+                    </div>
+                    <!-- /.tab-content -->
+                </div>
+                <!-- /.col -->
+            </div>
+            <!-- /.row -->
+
+        </div>
+        <!-- /.container -->
+
+    </div>
+    <!-- Kata -->
+
+    <a class="anchor" name="history"></a>
+    <div class="content-section-b">
 
         <div class="container-fluid">
 
@@ -444,7 +506,7 @@ IntInterval evensFrom1To10 =
     </div>
     <!-- Introduction  -->
 
-    <a  name="contribute"></a>
+    <a class="anchor" name="contribute"></a>
     <div class="content-footer">
 
         <div class="container-fluid">
