Add an anchor to memory section.
Change-Id: Ic4fc16bf122136abb786024ffe7bd42e0e6e0676

--- a/ja/index.html
+++ b/ja/index.html
@@ -372,6 +372,7 @@ IntInterval evensFrom1To10 =
 </div>
 <!-- Container Types -->
 
+<a class="anchor" name="memory"></a>
 <div class="content-section-b">
 
     <div class="container-fluid">
