--- a/ja/index.html
+++ b/ja/index.html
@@ -149,29 +149,29 @@
 &lt;dependency&gt;
   &lt;groupId&gt;org.eclipse.collections&lt;/groupId&gt;
   &lt;artifactId&gt;eclipse-collections-api&lt;/artifactId&gt;
-  &lt;version&gt;8.0.0&lt;/version&gt;
+  &lt;version&gt;8.1.0&lt;/version&gt;
 &lt;/dependency&gt;
 
 &lt;dependency&gt;
   &lt;groupId&gt;org.eclipse.collections&lt;/groupId&gt;
   &lt;artifactId&gt;eclipse-collections&lt;/artifactId&gt;
-  &lt;version&gt;8.0.0&lt;/version>
+  &lt;version&gt;8.1.0&lt;/version>
 &lt;/dependency&gt;</pre>
                     </div>
                     <div class="tab-pane fade" id="gradle">
                             <pre  class="prettyprint">
-compile 'org.eclipse.collections:eclipse-collections-api:8.0.0'
-compile 'org.eclipse.collections:eclipse-collections:8.0.0'</pre>
+compile 'org.eclipse.collections:eclipse-collections-api:8.1.0'
+compile 'org.eclipse.collections:eclipse-collections:8.1.0'</pre>
                     </div>
                     <div class="tab-pane fade" id="ivy">
                             <pre  class="prettyprint">
-&lt;dependency org="org.eclipse.collections" name="eclipse-collections-api" rev="8.0.0" /&gt;
-&lt;dependency org="org.eclipse.collections" name="eclipse-collections" rev="8.0.0" /&gt;</pre>
+&lt;dependency org="org.eclipse.collections" name="eclipse-collections-api" rev="8.1.0" /&gt;
+&lt;dependency org="org.eclipse.collections" name="eclipse-collections" rev="8.1.0" /&gt;</pre>
                     </div>
                     <div class="tab-pane fade" id="download">
                             <pre class="prettyprint">
-  <a target="_blank" href="http://mvnrepository.com/artifact/org.eclipse.collections/eclipse-collections-api/8.0.0">eclipse-collections-api-8.0.0.jar</a>
-  <a target="_blank" href="http://mvnrepository.com/artifact/org.eclipse.collections/eclipse-collections/8.0.0">eclipse-collections-8.0.0.jar</a></pre>
+  <a target="_blank" href="http://mvnrepository.com/artifact/org.eclipse.collections/eclipse-collections-api/8.1.0">eclipse-collections-api-8.1.0.jar</a>
+  <a target="_blank" href="http://mvnrepository.com/artifact/org.eclipse.collections/eclipse-collections/8.1.0">eclipse-collections-8.1.0.jar</a></pre>
                     </div>
 
                 </div>
@@ -532,6 +532,7 @@ public void getFirstNamesOfAllPeople()
             <div class="col-lg-4 col-sm-4">
                 <h3>最新ニュース</h3>
 
+                <p class="regular">Eclipse Collections 8.1.0が<a href="https://github.com/eclipse/eclipse-collections/releases/tag/8.1.0">リリース</a>されました <a class="light">(Mar 16th 2016)</a></p>
                 <p class="regular">Eclipse Collections 8.0.0が<a href="https://github.com/eclipse/eclipse-collections/releases/tag/8.0.0">リリース</a>されました <a class="light">(Sep 8th 2016)</a></p>
                 <p class="regular">Eclipse Collections 8.0.0-M1 マイルストーンビルドが<a href="https://github.com/eclipse/eclipse-collections/releases/tag/8.0.0-M1">アップロード</a>されました <a class="light">(Jul 6th 2016)</a></p>
                 <p class="regular">Eclipse Collections 7.1.0が<a href="https://github.com/eclipse/eclipse-collections/releases/tag/7.1.0">リリース</a>されました <a class="light">(Apr 8th 2016)</a></p>
