--- a/ja/index.html
+++ b/ja/index.html
@@ -1,4 +1,14 @@
 <!DOCTYPE html>
+<!--
+  ~ Copyright (c) 2017 Goldman Sachs.
+  ~ All rights reserved. This program and the accompanying materials
+  ~ are made available under the terms of the Eclipse Public License v1.0
+  ~ and Eclipse Distribution License v. 1.0 which accompany this distribution.
+  ~ The Eclipse Public License is available at http://www.eclipse.org/legal/epl-v10.html
+  ~ and the Eclipse Distribution License is available at
+  ~ http://www.eclipse.org/org/documents/edl-v10.php.
+  -->
+
 <html lang="ja">
 
 <head>
@@ -58,7 +68,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <img src="../img/eclipse-collections-logo.png" style="width:175px;height:50px;" align="left">
+            <img src="../img/eclipse-collections-logo.png" style="width:175px;height:50px;" align="left" alt="Eclipse Collections">
         </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -95,6 +105,7 @@
                     <ul class="dropdown-menu">
                         <li><a href="../index.html">English</a></li>
                         <li><a href="">Japanese</a></li>
+                        <li><a href="../ru/index.html">Русский</a></li>
                     </ul>
                 </li>
             </ul>
