--- a/ru/index.html
+++ b/ru/index.html
@@ -302,7 +302,7 @@ List&lt;Person&gt; peopleWithCats =
                     <p class="lead">
                         Неизменяемые (immutable) коллекции, коллекции примитивных типов, Bimap ("инвертированный" словарь, можно найти ключ по значению),
                         Multimap (мультисловари, словари с не уникальными ключами) и Bag (мультимножество, множество с повторяющимся элементами) -
-                        вы можете создать все эти разнообразные типы контейнеров, используя удбные и легко находимые фабрики.</p>
+                        вы можете создать все эти разнообразные типы контейнеров, используя удобные и легко находимые фабрики.</p>
                 </div>
                 <div class="col-lg-7 col-sm-6">
                     <ul class="nav nav-tabs">
@@ -528,11 +528,11 @@ public void getFirstNamesOfAllPeople()
                 на моногчисленных примерах. Они также включали и интервью с создателем GS Collections.
                 <br><br>
 
-                За зти годы около 40 разработчиков из одной компании внесли исправления и дополнения в этот фреймворк.
+                За эти годы около 40 разработчиков из одной компании внесли исправления и дополнения в этот фреймворк.
                 <br><br>
 
                 Чтобы полностью реализовать потенциал открытого проекта, фреймворк GS Collections перешёл  в Eclipse Foundation,
-                и был соответсвено переиминован в Eclipse Collections в 2015 году. Теперь платформа Eclipse Collections доступна всем,
+                и был соответственно переименован в Eclipse Collections в 2015 году. Теперь платформа Eclipse Collections доступна всем,
                 и любой разработчик может принять участие в её развитии!
             </p>
         </div>
@@ -623,7 +623,7 @@ public void getFirstNamesOfAllPeople()
                         <p class="regular">Eclipse PMI: <a href="https://projects.eclipse.org/projects/technology.collections">управление проектом на сайте eclipse</a></p>
                         <p class="regular">GitHub: <a href="https://github.com/eclipse/eclipse-collections">eclipse-collections</a></p>
                         <p class="regular">Трекер заявок: <a href="https://github.com/eclipse/eclipse-collections/issues">отслеживание заявок на GitHub</a></p>
-                        <p class="regular">Список рассылки: <a href="https://dev.eclipse.org/mailman/listinfo/collections-dev">collections-dev</a> список рассылки</p>
+                        <p class="regular">Список рассылки: <a href="https://dev.eclipse.org/mailman/listinfo/collections-dev">collections-dev</a></p>
                         <p class="regular">Wiki: <a href="https://github.com/eclipse/eclipse-collections/wiki">GitHub wiki</a></p>
                         <p class="regular">Форум: <a href="https://www.eclipse.org/forums/index.php?t=thread&amp;frm_id=329">Eclipse Collections Forum</a></p>
                         <p class="regular">StackOverflow: с пометкой (тегом) <a href="http://stackoverflow.com/questions/tagged/eclipse-collections">eclipse-collections</a></p>
