--- a/ja/index.html
+++ b/ja/index.html
@@ -44,8 +44,8 @@
 
     <script>
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+                    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+                m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
         })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
         ga('create', 'UA-71645852-1', 'auto');
@@ -74,19 +74,19 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
                 <li>
-                    <a href="#start">Get Started</a>
+                    <a href="#start">始め方</a>
                 </li>
                 <li>
-                    <a href="#concept">Concept</a>
+                    <a href="#concept">コンセプト</a>
                 </li>
                 <li>
-                    <a href="#learn">Learn</a>
+                    <a href="#learn">学ぶ</a>
                 </li>
                 <li>
-                    <a href="#history">History</a>
+                    <a href="#history">歴史</a>
                 </li>
                 <li>
-                    <a href="#contribute">Contribute</a>
+                    <a href="#contribute">コントリビュート</a>
                 </li>
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
@@ -102,9 +102,10 @@
                 </li>
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-                       aria-expanded="false">Language <span class="caret"></span></a>
+                       aria-expanded="false">言語 <span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li><a href="../index.html">English</a></li>
+                        <li><a href="../cn/index.html">中文</a></li>
                         <li><a href="">日本語</a></li>
                         <li><a href="../ru/index.html">Русский</a></li>
                         <li><a href="../pt-br/index.html">Português-Brasil</a></li>
