--- a/ru/index.html
+++ b/ru/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--
-  ~ Copyright (c) 2017 Goldman Sachs and others
+  ~ Copyright (c) 2018 Goldman Sachs and others
   ~ All rights reserved. This program and the accompanying materials
   ~ are made available under the terms of the Eclipse Public License v1.0
   ~ and Eclipse Distribution License v. 1.0 which accompany this distribution.
@@ -110,10 +110,11 @@
                            aria-expanded="false">Языки<span class="caret"></span></a>
                         <ul class="dropdown-menu">
                             <li><a href="../index.html">English</a></li>
+                            <li><a href="../fr/index.html">Français</a></li>
                             <li><a href="../cn/index.html">中文</a></li>
                             <li><a href="../ja/index.html">日本語</a></li>
-                            <li><a href="">Русский</a></li>
                             <li><a href="../pt-br/index.html">Português-Brasil</a></li>
+                            <li><a href="">Русский</a></li>
                         </ul>
                     </li>
                 </ul>
