Fix issue of dangling period in source code tag.
Signed-off-by: Nikhil Nanivadekar <nikhil.nanivadekar@gs.com>

--- a/cn/index.html
+++ b/cn/index.html
@@ -156,7 +156,7 @@
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
                     <h2 class="section-heading">Eclipse Collections入门须知</h2>
-                    <p class="lead">Eclipse Collections 是最完善的Java集合框架，它会为你的Java 编程带来无限的乐趣。
+                    <p class="lead">Eclipse Collections 是最完善的Java集合框架， 它会为你的Java 编程带来无限的乐趣。
                         <br><br>现在就使用你最喜欢的构建工具把它运用在你的Java项目中吧!</p>
                 </div>
                 <div class="col-lg-7 col-sm-6">
@@ -547,7 +547,7 @@ public void getFirstNamesOfAllPeople()
         <div class="container-fluid">
             <h2 class="section-heading">源代码</h2>
             <p class="lead">
-                在GitHub上可以找到<a href="https://github.com/eclipse/eclipse-collections">Eclipse Collections</a>的源代码</p>.
+                在GitHub上可以找到Eclipse Collections<a href="https://github.com/eclipse/eclipse-collections">的源代码</a>.
             </p>
         </div>
         <!-- /.container -->
