--- a/index.html
+++ b/index.html
@@ -550,7 +550,7 @@ public void getFirstNamesOfAllPeople()
         <div class="container-fluid">
             <h2 class="section-heading">Source Code</h2>
             <p class="lead">
-                Source code can be found on GitHub: <a href="https://github.com/eclipse/eclipse-collections">Eclipse Collections</a></p>.
+                Source code can be found on GitHub: <a href="https://github.com/eclipse/eclipse-collections">Eclipse Collections</a>.
             </p>
         </div>
         <!-- /.container -->
