--- a/pt-br/index.html
+++ b/pt-br/index.html
@@ -550,7 +550,7 @@ public void getFirstNamesOfAllPeople()
         <div class="container-fluid">
             <h2 class="section-heading">Código Fonte</h2>
             <p class="lead">
-                O código fonte pode ser encontrado no GitHub: <a href="https://github.com/eclipse/eclipse-collections">Eclipse Collections</a></p>.
+                O código fonte pode ser encontrado no GitHub: <a href="https://github.com/eclipse/eclipse-collections">Eclipse Collections</a>.
             </p>
         </div>
         <!-- /.container -->
