--- a/ru/index.html
+++ b/ru/index.html
@@ -561,7 +561,7 @@ public void getFirstNamesOfAllPeople()
         <div class="container-fluid">
             <h2 class="section-heading">Исходный Код</h2>
             <p class="lead">
-                Исходный код находится на GitHub: <a href="https://github.com/eclipse/eclipse-collections">Eclipse Collections</a></p>.
+                Исходный код находится на GitHub: <a href="https://github.com/eclipse/eclipse-collections">Eclipse Collections</a>.
             </p>
         </div>
         <!-- /.container -->
