--- a/fr/index.html
+++ b/fr/index.html
@@ -550,7 +550,7 @@ public void getFirstNamesOfAllPeople()
     <div class="container-fluid">
         <h2 class="section-heading">Code Source</h2>
         <p class="lead">
-            Le code source est accessible sur GitHub: <a href="https://github.com/eclipse/eclipse-collections">Eclipse Collections</a></p>.
+            Le code source est accessible sur GitHub: <a href="https://github.com/eclipse/eclipse-collections">Eclipse Collections</a>.
         </p>
     </div>
     <!-- /.container -->
