Minor website updates to fix styles.
Signed-off-by: Nikhil Nanivadekar <nikhil.nanivadekar@gs.com>

--- a/cn/index.html
+++ b/cn/index.html
@@ -528,6 +528,7 @@ public void getFirstNamesOfAllPeople()
             </p>
         </div>
     </div>
+    <!-- History  -->
 
     <a class="anchor" name="refGuide"></a>
     <div class="content-section-a">
@@ -542,19 +543,18 @@ public void getFirstNamesOfAllPeople()
 
     </div>
     <!-- Reference Guide  -->
+
     <a class="anchor" name="sourceCode"></a>
     <div class="content-section-b">
         <div class="container-fluid">
             <h2 class="section-heading">源代码</h2>
             <p class="lead">
-                在GitHub上可以找到Eclipse Collections<a href="https://github.com/eclipse/eclipse-collections">的源代码</a>.
+                在GitHub上可以找到<a href="https://github.com/eclipse/eclipse-collections">Eclipse Collections</a>的源代码.
             </p>
         </div>
         <!-- /.container -->
     </div>
     <!-- Source Code  -->
-    </div>
-    <!-- Introduction  -->
 
     <a class="anchor" name="contribute"></a>
     <div class="content-footer">
