--- a/ja/index.html
+++ b/ja/index.html
@@ -86,6 +86,12 @@
                     <a href="#history">歴史</a>
                 </li>
                 <li>
+                    <a href="#refGuide">リファレンスガイド</a>
+                </li>
+                <li>
+                    <a href="#sourceCode">ソースコード</a>
+                </li>
+                <li>
                     <a href="#contribute">コントリビュート</a>
                 </li>
                 <li class="dropdown">
@@ -523,13 +529,35 @@ public void getFirstNamesOfAllPeople()
             2015年、オープンソースプロジェクトとしての特徴を最大限に活かすため、GS CollectionsはEclipse Foundationに移管され、Eclipse Collectionsとして生まれ変わりました。
             コミュニティからのコントリビューションを受け付ける、完全にオープンなフレームワークになったのです。
         </p>
-        <hr class="section-heading-spacer">
+    </div>
+</div>
+<!-- History  -->
 
+<a class="anchor" name="refGuide"></a>
+<div class="content-section-a">
+    <div class="container-fluid">
+        <h2 class="section-heading">リファレンスガイド</h2>
+        <p class="lead">
+            ライブラリの詳細なリファレンスガイドはこちら:
+            <a href="https://github.com/eclipse/eclipse-collections/blob/master/docs/guide.md#eclipse-collections-reference-guide">Reference Guide</a>.
+        </p>
     </div>
     <!-- /.container -->
 
 </div>
-<!-- Introduction  -->
+<!-- Reference Guide  -->
+
+<a class="anchor" name="sourceCode"></a>
+<div class="content-section-b">
+    <div class="container-fluid">
+        <h2 class="section-heading">ソースコード</h2>
+        <p class="lead">
+            ソースコードはGitHubにホストされています: <a href="https://github.com/eclipse/eclipse-collections">Eclipse Collections</a>.
+        </p>
+    </div>
+    <!-- /.container -->
+</div>
+<!-- Source Code  -->
 
 <a class="anchor" name="contribute"></a>
 <div class="content-footer">
