--- a/index.html
+++ b/index.html
@@ -531,6 +531,7 @@ public void getFirstNamesOfAllPeople()
             </p>
         </div>
     </div>
+    <!-- History  -->
 
     <a class="anchor" name="refGuide"></a>
     <div class="content-section-a">
@@ -545,6 +546,7 @@ public void getFirstNamesOfAllPeople()
 
     </div>
     <!-- Reference Guide  -->
+
     <a class="anchor" name="sourceCode"></a>
     <div class="content-section-b">
         <div class="container-fluid">
@@ -556,8 +558,6 @@ public void getFirstNamesOfAllPeople()
         <!-- /.container -->
     </div>
     <!-- Source Code  -->
-    </div>
-    <!-- Introduction  -->
 
     <a class="anchor" name="contribute"></a>
     <div class="content-footer">
@@ -628,7 +628,15 @@ public void getFirstNamesOfAllPeople()
                 <div class="col-lg-12">
                     <ul class="list-inline">
                         <li>
-                            <p class="copyright text-muted small">Copyright &copy; 2016 The Eclipse Foundation. All Rights Reserved. </p>
+                            <p class="copyright text-muted small">Copyright &copy; 2018 The Eclipse Foundation. All Rights Reserved. </p>
+                        </li>
+                        <li class="footer-menu-divider">&sdot;</li>
+                        <li>
+                            <a class="small" href="http://www.eclipse.org">Eclipse Foundation</a>
+                        </li>
+                        <li class="footer-menu-divider">&sdot;</li>
+                        <li>
+                            <a class="small" href="http://www.eclipse.org/legal">Legal</a>
                         </li>
                         <li class="footer-menu-divider">&sdot;</li>
                         <li>
@@ -636,7 +644,11 @@ public void getFirstNamesOfAllPeople()
                         </li>
                         <li class="footer-menu-divider">&sdot;</li>
                         <li>
-                            <a class="small" href="http://www.eclipse.org/legal/termsofuse.php">Terms</a>
+                            <a class="small" href="http://www.eclipse.org/legal/termsofuse.php">Terms of Use</a>
+                        </li>
+                        <li class="footer-menu-divider">&sdot;</li>
+                        <li>
+                            <a class="small" href="http://www.eclipse.org/legal/copyright.php">Copyright Agent</a>
                         </li>
                     </ul>
                 </div>
