Fix map, set charts for German page.
Signed-off-by: Nikhil Nanivadekar <nikhil.nanivadekar@gs.com>

--- a/de/index.html
+++ b/de/index.html
@@ -414,13 +414,13 @@ IntInterval evensFrom1To10 =
                     </ul>
                     <div id="memory" class="tab-content">
                         <div class="tab-pane fade in active" id="set">
-                            <img class="img-responsive" src="img/set.png" alt="">
+                            <img class="img-responsive" src="../img/set.png" alt="">
                         </div>
                         <div class="tab-pane fade" id="map">
-                            <img class="img-responsive" src="img/map.png" alt="">
+                            <img class="img-responsive" src="../img/map.png" alt="">
                         </div>
                         <div class="tab-pane fade" id="ints">
-                            <img class="img-responsive" src="img/ints.png" alt="">
+                            <img class="img-responsive" src="../img/ints.png" alt="">
                         </div>
                     </div>
                 </div>
