Added Spanish Translation of the site.

--- a/fr/index.html
+++ b/fr/index.html
@@ -102,6 +102,7 @@
                     <ul class="dropdown-menu">
                         <li><a href="../index.html">English</a></li>
                         <li><a href="../de/index.html">Deutsch</a></li>
+                        <li><a href="../es/index.html">Español</a></li>
                         <li><a href="../cn/index.html">中文</a></li>
                         <li><a href="">Français</a></li>
                         <li><a href="../ja/index.html">日本語</a></li>
@@ -173,18 +174,18 @@
   &lt;artifactId&gt;eclipse-collections&lt;/artifactId&gt;
   &lt;version&gt;10.0.0&lt;/version>
 &lt;/dependency&gt;</pre>
-                    </div>
-                    <div class="tab-pane fade" id="gradle">
+                        </div>
+                        <div class="tab-pane fade" id="gradle">
                             <pre  class="prettyprint">
 compile 'org.eclipse.collections:eclipse-collections-api:10.0.0'
 compile 'org.eclipse.collections:eclipse-collections:10.0.0'</pre>
-                    </div>
-                    <div class="tab-pane fade" id="ivy">
+                        </div>
+                        <div class="tab-pane fade" id="ivy">
                             <pre  class="prettyprint">
 &lt;dependency org="org.eclipse.collections" name="eclipse-collections-api" rev="10.0.0" /&gt;
 &lt;dependency org="org.eclipse.collections" name="eclipse-collections" rev="10.0.0" /&gt;</pre>
-                    </div>
-                    <div class="tab-pane fade" id="download">
+                        </div>
+                        <div class="tab-pane fade" id="download">
                             <pre class="prettyprint">
 <a target="_blank" href="http://mvnrepository.com/artifact/org.eclipse.collections/eclipse-collections-api/10.0.0">eclipse-collections-api-10.0.0.jar</a>
 <a target="_blank" href="http://mvnrepository.com/artifact/org.eclipse.collections/eclipse-collections/10.0.0">eclipse-collections-10.0.0.jar</a></pre>
@@ -616,39 +617,39 @@ public void getFirstNamesOfAllPeople()
 <!-- /.banner -->
 
 <!-- Footer -->
-<footer>
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-lg-12">
-                <ul class="list-inline">
-                    <li>
-                        <p class="copyright text-muted small">Copyright &copy; 2018 The Eclipse Foundation. All Rights Reserved. </p>
-                    </li>
-                    <li class="footer-menu-divider">&sdot;</li>
-                    <li>
-                        <a class="small" href="http://www.eclipse.org">Eclipse Foundation</a>
-                    </li>
-                    <li class="footer-menu-divider">&sdot;</li>
-                    <li>
-                        <a class="small" href="http://www.eclipse.org/legal">Legal</a>
-                    </li>
-                    <li class="footer-menu-divider">&sdot;</li>
-                    <li>
-                        <a class="small" href="http://www.eclipse.org/legal/privacy.php">Privacy</a>
-                    </li>
-                    <li class="footer-menu-divider">&sdot;</li>
-                    <li>
-                        <a class="small" href="http://www.eclipse.org/legal/termsofuse.php">Terms of Use</a>
-                    </li>
-                    <li class="footer-menu-divider">&sdot;</li>
-                    <li>
-                        <a class="small" href="http://www.eclipse.org/legal/copyright.php">Copyright Agent</a>
-                    </li>
-                </ul>
+    <footer>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-lg-12">
+                    <ul class="list-inline">
+                        <li>
+                            <p class="copyright text-muted small">Copyright &copy; 2018 The Eclipse Foundation. All Rights Reserved. </p>
+                        </li>
+                        <li class="footer-menu-divider">&sdot;</li>
+                        <li>
+                            <a class="small" href="http://www.eclipse.org">Eclipse Foundation</a>
+                        </li>
+                        <li class="footer-menu-divider">&sdot;</li>
+                        <li>
+                            <a class="small" href="http://www.eclipse.org/legal">Legal</a>
+                        </li>
+                        <li class="footer-menu-divider">&sdot;</li>
+                        <li>
+                            <a class="small" href="http://www.eclipse.org/legal/privacy.php">Privacy</a>
+                        </li>
+                        <li class="footer-menu-divider">&sdot;</li>
+                        <li>
+                            <a class="small" href="http://www.eclipse.org/legal/termsofuse.php">Terms of Use</a>
+                        </li>
+                        <li class="footer-menu-divider">&sdot;</li>
+                        <li>
+                            <a class="small" href="http://www.eclipse.org/legal/copyright.php">Copyright Agent</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
-    </div>
-</footer>
+    </footer>
 
 <!-- jQuery -->
 <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
