--- a/ru/index.html
+++ b/ru/index.html
@@ -104,6 +104,7 @@
                             <li><a href="../index.html">English</a></li>
                             <li><a href="../de/index.html">Deutsch</a></li>
                             <li><a href="../gr/index.html">Ελληνικά</a></li>
+                            <li><a href="../es/index.html">Español</a></li>
                             <li><a href="../fr/index.html">Français</a></li>
                             <li><a href="../cn/index.html">中文</a></li>
                             <li><a href="../ja/index.html">日本語</a></li>
