Add Serbian translation for Eclipse Collections website.

--- a/ru/index.html
+++ b/ru/index.html
@@ -113,6 +113,7 @@
                             <li><a href="../pt-br/index.html">Português-Brasil</a></li>
                             <li><a href="">Русский</a></li>
                             <li><a href="../hi/index.html">हिंदी</a></li>
+                            <li><a href="../sr-rs-latn/index.html">Srpski (latinica)</a></li>
                         </ul>
                     </li>
                 </ul>
