Fix link to reference guide
Signed-off-by: Ivan Milosavljevic (TheJavaGuy) <TheJavaGuy@yandex.com>

--- a/cn/index.html
+++ b/cn/index.html
@@ -540,7 +540,7 @@ public void getFirstNamesOfAllPeople()
             <h2 class="section-heading">参考指南</h2>
             <p class="lead">
                 GitHub上有Eclipse Collections的详细参考指南：
-                <a href="https://github.com/eclipse/eclipse-collections/blob/master/docs/guide.md#eclipse-collections-reference-guide">参考指南</a>.
+                <a href="https://github.com/eclipse/eclipse-collections/blob/master/docs/0-RefGuide.adoc">参考指南</a>.
             </p>
         </div>
         <!-- /.container -->
