--- a/de/index.html
+++ b/de/index.html
@@ -546,7 +546,7 @@ public void getFirstNamesOfAllPeople()
             <h2 class="section-heading">Reference Guide</h2>
             <p class="lead">
                 Eine umfassende Anleitung ist auf GitHub verfügbar:
-                <a href="https://github.com/eclipse/eclipse-collections/blob/master/docs/guide.md#eclipse-collections-reference-guide">Reference Guide</a>.
+                <a href="https://github.com/eclipse/eclipse-collections/blob/master/docs/0-RefGuide.adoc">Reference Guide</a>.
             </p>
         </div>
         <!-- /.container -->
