--- a/el/index.html
+++ b/el/index.html
@@ -549,7 +549,7 @@ public void getFirstNamesOfAllPeople()
         <h2 class="section-heading">Οδηγός Αναφοράς</h2>
         <p class="lead">
             Ένας πλήρης οδηγός αναφοράς της βιβλιοθήκης είναι διαθέσιμος στο GitHub:
-            <a href="https://github.com/eclipse/eclipse-collections/blob/master/docs/guide.md#eclipse-collections-reference-guide">Οδηγός Αναφοράς</a>.
+            <a href="https://github.com/eclipse/eclipse-collections/blob/master/docs/0-RefGuide.adoc">Οδηγός Αναφοράς</a>.
         </p>
     </div>
     <!-- /.container -->
