--- a/es/index.html
+++ b/es/index.html
@@ -544,7 +544,7 @@ public void getFirstNamesOfAllPeople()
         <h2 class="section-heading">Guía de referencia</h2>
         <p class="lead">
             Una guía de referencia de la librería se encuentra disponible en GitHub:
-            <a href="https://github.com/eclipse/eclipse-collections/blob/master/docs/guide.md#eclipse-collections-reference-guide">Guía de referencia</a>.
+            <a href="https://github.com/eclipse/eclipse-collections/blob/master/docs/0-RefGuide.adoc">Guía de referencia</a>.
         </p>
     </div>
     <!-- /.container -->
