--- a/hi/index.html
+++ b/hi/index.html
@@ -543,7 +543,7 @@ public void getFirstNamesOfAllPeople()
         <h2 class="section-heading">निर्देशिका</h2>
         <p class="lead">
             लाइब्रेरी का एक व्यापक संदर्भ गाइड GitHub पर उपलब्ध है:
-            <a href="https://github.com/eclipse/eclipse-collections/blob/master/docs/guide.md#eclipse-collections-reference-guide">निर्देशिका</a>|
+            <a href="https://github.com/eclipse/eclipse-collections/blob/master/docs/0-RefGuide.adoc">निर्देशिका</a>|
         </p>
     </div>
     <!-- /.container -->
