--- a/no-nb/index.html
+++ b/no-nb/index.html
@@ -547,7 +547,7 @@ public void getFirstNamesOfAllPeople()
             <h2 class="section-heading">Veiledning</h2>
             <p class="lead">
                 En omfattende referansehåndbok for biblioteket er tilgjengelig på GitHub:
-                <a href="https://github.com/eclipse/eclipse-collections/blob/master/docs/guide.md#eclipse-collections-reference-guide">Reference Guide</a>.
+                <a href="https://github.com/eclipse/eclipse-collections/blob/master/docs/0-RefGuide.adoc">Reference Guide</a>.
             </p>
         </div>
         <!-- /.container -->
