--- a/pt-br/index.html
+++ b/pt-br/index.html
@@ -543,7 +543,7 @@ public void getFirstNamesOfAllPeople()
             <h2 class="section-heading">Guia de referência</h2>
             <p class="lead">
                 Um guia de referência abrangente da biblioteca está disponível no GitHub:
-                <a href="https://github.com/eclipse/eclipse-collections/blob/master/docs/guide.md#eclipse-collections-reference-guide">Guia de referência (em Inglês)</a>.
+                <a href="https://github.com/eclipse/eclipse-collections/blob/master/docs/0-RefGuide.adoc">Guia de referência (em Inglês)</a>.
             </p>
         </div>
         <!-- /.container -->
