--- a/sr-rs-latn/index.html
+++ b/sr-rs-latn/index.html
@@ -543,7 +543,7 @@ public void getFirstNamesOfAllPeople()
             <h2 class="section-heading">Referentni vodič</h2>
             <p class="lead">
                 Detaljni referentni vodič za ovu biblioteku se nalazi na GitHubu:
-                <a href="https://github.com/eclipse/eclipse-collections/blob/master/docs/guide.md#eclipse-collections-reference-guide">Referentni vodič</a>.
+                <a href="https://github.com/eclipse/eclipse-collections/blob/master/docs/0-RefGuide.adoc">Referentni vodič</a>.
             </p>
         </div>
         <!-- /.container -->
