--- a/fr/index.html
+++ b/fr/index.html
@@ -543,7 +543,7 @@ public void getFirstNamesOfAllPeople()
         <h2 class="section-heading">Guide de référence</h2>
         <p class="lead">
             Un guide complet de référence sur la librairie est accessible sur GitHub:
-            <a href="https://github.com/eclipse/eclipse-collections/blob/master/docs/guide.md#eclipse-collections-reference-guide">Guide de Référence (en Anglais)</a>.
+            <a href="https://github.com/eclipse/eclipse-collections/blob/master/docs/0-RefGuide.adoc">Guide de Référence (en Anglais)</a>.
         </p>
     </div>
     <!-- /.container -->
