--- a/ja/index.html
+++ b/ja/index.html
@@ -543,7 +543,7 @@ public void getFirstNamesOfAllPeople()
         <h2 class="section-heading">リファレンスガイド</h2>
         <p class="lead">
             ライブラリの詳細なリファレンスガイドはこちら:
-            <a href="https://github.com/eclipse/eclipse-collections/blob/master/docs/guide.md#eclipse-collections-reference-guide">Reference Guide</a>.
+            <a href="https://github.com/eclipse/eclipse-collections/blob/master/docs/0-RefGuide.adoc">Reference Guide</a>.
         </p>
     </div>
     <!-- /.container -->
