--- a/ru/index.html
+++ b/ru/index.html
@@ -554,7 +554,7 @@ public void getFirstNamesOfAllPeople()
             <h2 class="section-heading">Руководство</h2>
             <p class="lead">
                 Полное руководство по библиотеке можно найти на GitHub здесь:
-                <a href="https://github.com/eclipse/eclipse-collections/blob/master/docs/guide.md#eclipse-collections-reference-guide">Reference Guide</a> (англ.)
+                <a href="https://github.com/eclipse/eclipse-collections/blob/master/docs/0-RefGuide.adoc">Reference Guide</a> (англ.)
             </p>
         </div>
         <!-- /.container -->
